<resources>
    <string name="app_name"> </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_app"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Praca Inżynierska</string>
    <string name="nav_header_subtitle">Wykonał: Igor Jasłowski, Kamil Best</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notification">Notification</string>

    <!-- Logs -->
    <string-array name="Logs">
        <item>log 1</item>
        <item>log 2</item>
        <item>log 3</item>
        <item>log 4</item>
        <item>log 5</item>
        <item>log 6</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Alarm</string>
    <string name="camera">Kamera</string>
    <string name="temperature">Temperatura</string>
    <string name="light">Światło</string>
    <string name="settings">Ustawienia</string>
    <string name="sensors">Czujniki</string>
    <string name="degreesC">°C</string>
    <string name="lightOn">On</string>
    <string name="lightOff">Off</string>
    <string name="test">50</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logout">Wyloguj się</string>
</resources>
