<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_gradient_login"
    tools:context=".activity.LoginActivity">






        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/logoXmarks1"
                    android:layout_width="126dp"
                    android:layout_height="99dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:paddingLeft="5dp"
                    android:src="@drawable/ic_baseline_smart_home"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:text="SMART"
                        android:textColor="@color/white"
                        android:textSize="40dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_black"
                        android:text="HOME"
                        android:textColor="@color/white"
                        android:textSize="45dp" />
                </LinearLayout>

            </LinearLayout>



                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_login_rounded"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:drawableLeft="@drawable/ic_avatar"
                    android:drawableTint="@color/white"
                    android:drawablePadding="10dp"/>


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/input_login_rounded"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="@color/white"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/white" />


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_login_rounded"
                android:fontFamily="@font/roboto_medium"
                android:text="ZALOGUJ"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:onClick="loginUser"
                />

</LinearLayout>
</LinearLayout>